trabajando en la interfaz principal 3.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="koala">Koala</string>
+    <string name="la_despensa">La Despensa</string>
+    <string name="nuestra_aplicacion_tarararararaa">Nuestra aplicacion tarararararaa....</string>
+    <string name="buscar">Buscar</string>
 </resources>
