--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="titulo_Editar_Actividad">Editar Categoria</string>
     <string name="titulo_Add_Actividad">Crear nueva Categoria</string>
     <string name="addNewCategoryToast">Los datos no son validos, intentalo de nuevo</string>
+    <string name="btnGaleria">Añadir desde Galeria...</string>
 </resources>
