--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,35 +7,34 @@
     <string name="register">Register</string>
     <string name="koala">Koala</string>
     <string name="nombreApp">Mundo Glaciar</string>
-    <string name="descripcionApp">Compra los mejores productos en nuestra tienda</string>
-    <string name="buscar">Buscar</string>
-    <string name="nombre_add_edit_categoria">Nombre</string>
-    <string name="link_add_edit_categoria">Link Imagen... (http://myimg.com/imagen.jpg)</string>
-    <string name="description_add_edit_category">Descripción</string>
-    <string name="deleteCategoria">BORRAR</string>
-    <string name="editCategoria">EDITAR</string>
-    <string name="titulo_Editar_Actividad">Editar Categoria</string>
-    <string name="titulo_Add_Actividad">Añadir nueva Categoria</string>
-    <string name="addNewCategoryToast">Los datos no son validos, intentalo de nuevo</string>
-    <string name="btnGaleria">Añadir desde Galeria...</string>
-    <string name="editarCategoria">Editar</string>
-    <string name="add_edit_esqui_marca">Marca</string>
-    <string name="add_edit_esqui_modeloEsqui">Modelo</string>
-    <string name="dialog_borrar">Borrar</string>
-    <string name="titulo_Editar_Esqui">Editar Esqui</string>
-    <string name="titulo_Add_Esqui">Añadir nuevo modelo de Esqui</string>
-    <string name="add_edit_esqui_precio">Precio</string>
-    <string name="initialData_FreeStyle_Description">Para los amantes</string>
-    <string name="initialData_FreeRide_Description">Para los amantes del puro esqui</string>
-    <string name="createChooser_Permisos_Galeria">Seleccione la aplicacion</string>
-    <string name="denegado_Permisos">Porfavor, acepta los permisos</string>
+    <string name="descripcionApp">Buy the best products in our store</string>
+    <string name="nombre_add_edit_categoria">Name</string>
+    <string name="link_add_edit_categoria">Link Image... (http://myimg.com/imagen.jpg)</string>
+    <string name="description_add_edit_category">Description</string>
+    <string name="deleteCategoria">DELETE</string>
+    <string name="editCategoria">EDIT</string>
+    <string name="titulo_Editar_Actividad">Edit Category</string>
+    <string name="titulo_Add_Actividad">Add new Category</string>
+    <string name="addNewCategoryToast">Data is not valid, try again</string>
+    <string name="btnGaleria">Add from Gallery...</string>
+    <string name="editarCategoria">Edit</string>
+    <string name="add_edit_esqui_marca">Brand</string>
+    <string name="add_edit_esqui_modeloEsqui">Model</string>
+    <string name="dialog_borrar">Delete</string>
+    <string name="titulo_Editar_Esqui">Edit Sky</string>
+    <string name="titulo_Add_Esqui">Add new Ski model</string>
+    <string name="add_edit_esqui_precio">Price</string>
+    <string name="initialData_FreeStyle_Description">For freeStyle lovers</string>
+    <string name="initialData_FreeRide_Description">For lovers of pure skiing</string>
+    <string name="createChooser_Permisos_Galeria">Select the application</string>
+    <string name="denegado_Permisos">Please accept permissions</string>
     <string name="titleNotification">Mundo Glaciar</string>
-    <string name="messageNotification">Se ha creado una nueva categoria!</string>
-    <string name="olderVersion_Permission">No tienes los permisos</string>
-    <string name="dialogBorrarEsquiTitle">Borrar Modelo de Esqui</string>
-    <string name="dialogBorrarEsquiMessage">Estas seguro que quieres borrar</string>
-    <string name="dialogBorrarEsquiToast">Se ha borrado con exito</string>
-    <string name="dialogBorrarCategoria">Borrar Categoria</string>
-    <string name="dialogBorrarCategoriaMEssage">Estas seguro que quieres borrar</string>
-    <string name="dialogBorrarCategoriaToast">Se ha borrado con exito</string>
+    <string name="messageNotification">A new category has been created</string>
+    <string name="olderVersion_Permission">You don not have the permissions</string>
+    <string name="dialogBorrarEsquiTitle">Delete Ski Model</string>
+    <string name="dialogBorrarEsquiMessage">Are you sure you want to delete?</string>
+    <string name="dialogBorrarEsquiToast">Successfully deleted</string>
+    <string name="dialogBorrarCategoria">Delete Category</string>
+    <string name="dialogBorrarCategoriaMEssage">Are you sure you want to delete?</string>
+    <string name="dialogBorrarCategoriaToast">Successfully deleted</string>
 </resources>
